# gsmtui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: app.rs  constants.rs  event.rs  main.rs  project_client.rs  secret_client.rs  ui.rs  validation.rs
src/ui/: auth.rs  colors.rs  detail.rs  dialogs.rs  empty.rs  header.rs  help.rs  lists.rs  mod.rs  status.rs  utils.rs
